<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timer">

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.bproductive3.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_mood"
        android:name="com.example.bproductive3.ui.mood.MoodFragment"
        android:label="@string/title_mood"
        tools:layout="@layout/fragment_mood" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.bproductive3.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_todolist"
        android:name="com.example.bproductive3.ui.todolist.TodolistFragment"
        android:label="To do list"
        tools:layout="@layout/fragment_todolist" />

    <fragment
        android:id="@+id/navigation_appinfo"
        android:name="com.example.bproductive3.ui.appinfo.AppinfoFragment"
        android:label="App Info"
        tools:layout="@layout/fragment_appinfo" />
</navigation>
