<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.todolist.TodolistFragment"
    android:orientation="vertical"
    android:weightSum="100">

    <ListView
        android:id="@+id/TaskList"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="80"
    />

    <ImageButton
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_add_circle_outline_black_24dp"
        android:layout_weight="20"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
    />

</LinearLayout>